# comosoco-env

./: .gitignore  README.md  Taskfile.yml  VSCProject.code-workspace  pyproject.toml  requirements-minimal.txt  requirements-standard.txt
comosoco/: installation-test.ipynb  installation-test_marimo.py  installation-test_notebook.ipynb  installation-test_script.py
